--- a/gb/25/10/1/n14606766.md
+++ b/gb/25/10/1/n14606766.md
@@ -7,41 +7,42 @@
 <hr>
 	<p>【大纪元2025年10月01日讯】（大纪元记者杨逸帆报导）孙盛希继《Tidy It Up》后，再度推出全新单曲《Never Cared》，并在10月1日正式数位上架。这首作品作为《Tidy It Up》的前传，唱出“想要被听见却被忽略”的心声。而孙盛希之前在欧洲为新歌拍摄的宣传短片，会陆续发布在她的自媒体平台上。</p>
 <p>孙盛希坦言，这首歌是一种双向呐喊，既对外也是对内的求救，描绘当一段关系投入过深却被忽视时，心里涌现的怒、悲、委屈与失望。她希望听众在歌曲中看到自己，也能相信自己，“因为这样的故事与感受，可能发生在任何一段关系里。”</p>
-<figure id="attachment_14606798" aria-describedby="caption-attachment-14606798" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606798-20251001-Never-Cared-06.jpg"><img decoding="async" class="size-large wp-image-14606798" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606798-20251001-Never-Cared-06-600x900.jpg" alt="孙盛希坦言《Never Cared》是一种双向呐喊，描绘当一段关系投入过深却被忽视时，心里涌现的怒、悲、委屈与失望。（滚石唱片提供）" width="450" b="900" /></a><figcaption id="caption-attachment-14606798" class="wp-caption-text">孙盛希坦言《Never Cared》是一种双向呐喊。（滚石唱片提供）</figcaption></figure>
+<figure id="attachment_14606798" aria-describedby="caption-attachment-14606798" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606798-20251001-Never-Cared-06.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14606798" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606798-20251001-Never-Cared-06-600x900.jpg" alt="孙盛希坦言《Never Cared》是一种双向呐喊，描绘当一段关系投入过深却被忽视时，心里涌现的怒、悲、委屈与失望。（滚石唱片提供）" width="450" b="900"></a><figcaption id="caption-attachment-14606798" class="wp-caption-text">孙盛希坦言《Never Cared》是一种双向呐喊。（滚石唱片提供）</figcaption></figure>
 <p>《Never Cared》是一首融合Breakbeat与R&amp;B、全英文创作的情绪系作品。孙盛希分享，这首歌倾注大量情绪，因此录音时格外投入。</p>
 <p>最后成品中保留了许多Demo阶段的guide vocal（示范唱），她透露：“后来回到洛杉矶重录、回到台北又录了一次，都没有第一次的感动。这让我学到，以后创作阶段试唱都要有心理准备，因为那可能就是最后的母带。”</p>
 <p>孙盛希特别提及歌词中的一段：“At the end of the day, there’s no one way. Losing faith, but I’m still me. Yeah, I still got me.”即使在最无助、失去信仰的时候，也要相信自己的力量，依靠自己，她说：“我希望这首歌能给听众朋友这样的能量。”</p>
-<figure id="attachment_14606799" aria-describedby="caption-attachment-14606799" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606799-20251001-Never-Cared-03.jpg"><img decoding="async" class="size-large wp-image-14606799" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606799-20251001-Never-Cared-03-600x900.jpg" alt="孙盛希《Never Cared》作为《Tidy It Up》前传，化真实情绪为动人力量。（滚石唱片提供）" width="450" b="900" /></a><figcaption id="caption-attachment-14606799" class="wp-caption-text">孙盛希推出全新单曲《Never Cared》。（滚石唱片提供）</figcaption></figure>
+<figure id="attachment_14606799" aria-describedby="caption-attachment-14606799" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14606799-20251001-Never-Cared-03.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14606799" src="https://i.epochtimes.com/assets/uploads/2025/10/id14606799-20251001-Never-Cared-03-600x900.jpg" alt="孙盛希《Never Cared》作为《Tidy It Up》前传，化真实情绪为动人力量。（滚石唱片提供）" width="450" b="900"></a><figcaption id="caption-attachment-14606799" class="wp-caption-text">孙盛希推出全新单曲《Never Cared》。（滚石唱片提供）</figcaption></figure>
 <p>孙盛希近期分享7月赴欧洲旅行时，特地在德国与熟识的导演团队安排了一天的拍摄，短短几小时就移动至4、5个场景，包括防空洞、充满涂鸦的废墟和隧道，捕捉到与歌曲压抑情绪相呼应的影像，这些影像将陆续在她的自媒体平台分享。</p>
 <p>展望下半年，孙盛希也兴奋透露：“接下来会有不同的合作单曲和OST上线，大家可以听到很多新歌，年底我和我的歌迷都会很忙碌。”</p>
 <p>责任编辑：辛幼安</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/10/n13881874.md#1">3年未面见家人 孙盛希飞回韩国与爸爸团聚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/17/n14055927.md#1">新歌结合MBTI 孙盛希自创10秒“人格测验”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/27/n14082221.md#1">孙盛希受邀赴韩拍宣传片 大推穿韩服游王宫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/1/n14127825.md#1">耗时3年推新专辑 孙盛希：人生最长期检讨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/24/n9888434.md#1" target="_blank">杨宁：周恩来初恋女友投河 其子被打成右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610664.md#1">诗词九首 中秋敬颂师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/15/n14595067.md#1">【古道人生】相貌丑陋的他让表弟冒名相亲 弄假成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610757.md#1">【未解之谜】不可思议的胎梦 孩子与父母的神奇缘分</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610810.md#1">夫妻之义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/27/n14603916.md#1">六十年积累功德 徐某登仙界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615421.md#1">【直播】川普在以色列议会发表历史性的演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615524.md#1">【纪元焦点】习垂死挣扎 美中关系横生变故</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615525.md#1">【唐青看时事】稀土战开打 川普重拳反击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614484.md#1">黄秋生曾想与吴慷仁合作 时隔2年态度急转</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614543.md#1">NASA太空望远镜直击尘埃深处 发现红超巨星</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614540.md#1">哈佛经济学家：中共打稀土牌将削弱其垄断地位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613961.md#1">大陆男星杨洋晒度假素颜照 炸裂手机壳成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614535.md#1">谁害了于朦胧？疑似范世锜微博帖文藏玄机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615147.md#1">全昭旻回归《Running Man》 与成员默契互动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613917.md#1">疑受于朦胧坠亡案影响 范世锜紧急取消演唱会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/12/n14614646.md#1">如何让生活充满欢笑？ 心理学家教你5招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615048.md#1">浴室里的这3样东西 千万别共用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609546.md#1">拌酱让蔬菜更美味 大厨教你做“凉拌酱汁”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615224.md#1">为什么你应该在花园里撒上一些黑胡椒？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613896.md#1">骇客秒窃银行资料？这张卡可即时防护</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/1/n14606766.htm">孙盛希赴欧洲旅行边拍片 影像会陆续分享</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
